deploy/k8s/deployment-postgraphile.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skjeberg-inv-postgraphile
spec:
  selector:
    matchLabels:
      app: skjeberg-inv-postgraphile
  template:
    metadata:
      labels:
        app: skjeberg-inv-postgraphile
    spec:
      containers:
      - name: skjeberg-inv-postgraphile
        image: graphile/postgraphile
        ports:
          - containerPort: 5432
        args:
          ["--connection",
          "postgres://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@$(MPG_HOSTNAME):$(MPG_PORT)/golf-db",
          "--port",
          "5432",
          "--schema",
          "public",
          "--enhance-graphiql",
          "--subscriptions",
          "--watch",
          "--dynamic-json",
          "--no-setof-functions-contain-nulls",
          "--no-ignore-rbac",
          "--show-error-stack=json",
          "--extended-errors", "hint,detail,errcode",
          "--export-schema-graphql", "schema.graphql",
          "--enhance-graphiql",
          "--allow-explain",
          "--enable-query-batching",
          "--legacy-relations", "omit",
          ]
