deploy/k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skjeberg-inv
spec:
  selector:
    matchLabels:
      app: skjeberg-inv
  template:
    metadata:
      labels:
        app: skjeberg-inv
    spec:
      containers:
      - name: skjeberg-inv
        image: registry.gitlab.com/oleorhagen/golftourney/skjeberg-inv
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: gitlab-container-registry-login-secret
