deploy/k8s/services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: skjeberg-inv
spec:
  type: ClusterIP
  selector:
    app: skjeberg-inv
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
